# mediafx-frameserver

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: frameserver-ci.yml  get-version.sh  publish-crate.yml  publish-frei0r.yml  publish-npm.yml  publish-pypi.yml
.zed/: settings.json
clients/client_state/: Cargo.toml
clients/client_state/src/: lib.rs
clients/mediafx-py/: Cargo.toml  pyproject.toml
clients/mediafx-py/python/mediafx/: __init__.py  _mediafx.pyi  mediafx.pyi
clients/mediafx-py/python/tests/: color.py  shift.py
clients/mediafx-py/src/: lib.rs
clients/mediafx_node/: .npmignore  Cargo.toml  README.md  package.json
clients/mediafx_node/.github/workflows/: CI.yml
clients/mediafx_node/examples/: color.ts  shift.ts
clients/mediafx_node/npm/darwin-arm64/: README.md  package.json
clients/mediafx_node/npm/darwin-x64/: README.md  package.json
clients/mediafx_node/npm/linux-arm64-gnu/: README.md  package.json
clients/mediafx_node/npm/linux-arm64-musl/: README.md  package.json
clients/mediafx_node/npm/linux-x64-gnu/: README.md  package.json
clients/mediafx_node/npm/linux-x64-musl/: README.md  package.json
clients/mediafx_node/npm/win32-x64-msvc/: README.md  package.json
clients/mediafx_node/src/: lib.rs
clients/mediafx_py/: Cargo.toml  pyproject.toml
clients/mediafx_py/python/examples/: color.py  shift.py
clients/mediafx_py/python/mediafx/: __init__.py  _mediafx.pyi
clients/mediafx_py/python/tests/: color.py  shift.py
clients/mediafx_py/src/: lib.rs
frameserver/: Cargo.toml  build.rs
frameserver/src/: client.rs  context.rs  frame.rs  frame_client.rs  frame_server.rs  frames.rs  lib.rs  messages.rs  server.rs
frameserver/src/server/: bindings.rs
frameserver/tests/: ipc.rs
frei0r/mediafx/: Cargo.toml
frei0r/mediafx/examples/: color.rs  shift.rs
frei0r/mediafx/src/: lib.rs
frei0r/mediafx_filter/: Cargo.toml
frei0r/mediafx_filter/examples/: color.rs  shift.rs
frei0r/mediafx_filter/src/: lib.rs
frei0r/mediafx_mixer2/: Cargo.toml
frei0r/mediafx_mixer2/src/: lib.rs
frei0r/mediafx_mixer3/: Cargo.toml
frei0r/mediafx_mixer3/src/: lib.rs
frei0r/mediafx_source/: Cargo.toml
frei0r/mediafx_source/src/: lib.rs
mediafx/: Cargo.toml
mediafx/client/: Cargo.toml
mediafx/client/src/: lib.rs
mediafx/common/: Cargo.toml
mediafx/common/src/: context.rs  lib.rs  messages.rs
mediafx/server/: Cargo.toml
mediafx/server/src/: lib.rs
mediafx/src/: client.rs  context.rs  lib.rs  message.rs  messages.rs  server.rs
mediafx/tests/: Cargo.toml  ipc.rs
mediafx/tests/tests/: ipc.rs
