[workspace]
resolver = "2"
members = [
    "mediafx/server",
    "mediafx/client",
    "mediafx/common",
    "mediafx/tests",
    "frei0r/mediafx",
    "frei0r/mediafx_filter",
    "frei0r/mediafx_mixer2",
    "frei0r/mediafx_mixer3",
    "frei0r/mediafx_source",
    "clients/mediafx-py",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.87"
