[workspace]
resolver = "2"
members = [
    "mediafx",
    "frei0r/mediafx",
    "frei0r/mediafx_filter",
    "frei0r/mediafx_mixer2",
    "frei0r/mediafx_mixer3",
    "frei0r/mediafx_source",
    "clients/client_state",
    "clients/mediafx_py",
    "clients/mediafx_node",
]

[workspace.package]
version = "0.1.2-a3"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/rectalogic/mediafx-frameserver"
readme = "README.md"
rust-version = "1.86"

[profile.release]
lto = true

[profile.release.package.mediafx_node]
strip = "symbols"
