[package]
name = "mediafx"
description = "MediaFX frameserver client and server APIs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
bincode = "2.0"
shared_memory = "0.12"

[[test]]
name = "ipc"
harness = false
