[package]
name = "mediafx_node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
client_state = { path = "../client_state" }
mediafx_client = { path = "../../mediafx/client" }

[build-dependencies]
napi-build = "2.0.1"
