[package]
name = "mediafx_py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_mediafx"
crate-type = ["cdylib"]

[dependencies]
client_state = { path = "../client_state" }

[dependencies.pyo3]
version = "0.25"
features = ["abi3-py312"]
