[package]
name = "mediafx_frei0r"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
frei0r-rs = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "1.0.0" }
mediafx = { path = "../../mediafx" }

[[example]]
name = "shift"

[[example]]
name = "color"
